--- a/module/virusdroplet_m.html
+++ b/module/virusdroplet_m.html
@@ -162,19 +162,19 @@
 <polygon fill="none" stroke="black" points="93,-108 0,-108 0,-84 93,-84 93,-108"/>
 <text text-anchor="middle" x="46.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50">virusDroplet_m</text>
 </g>
-<!-- program~droplet2csv -->
+<!-- proc~simulationsetup -->
 <g id="module~~virusdroplet_m~~UsedByGraph_node2" class="node">
-<title>program~droplet2csv</title>
-<g id="a_module~~virusdroplet_m~~UsedByGraph_node2"><a xlink:href=".././program/droplet2csv.html" xlink:title="droplet2CSV">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="229,-192 150,-192 150,-168 229,-168 229,-192"/>
-<text text-anchor="middle" x="189.5" y="-177.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">droplet2CSV</text>
+<title>proc~simulationsetup</title>
+<g id="a_module~~virusdroplet_m~~UsedByGraph_node2"><a xlink:href=".././proc/simulationsetup.html" xlink:title="simulationSetUp">
+<polygon fill="#d9534f" stroke="#d9534f" points="239.5,-192 139.5,-192 139.5,-168 239.5,-168 239.5,-192"/>
+<text text-anchor="middle" x="189.5" y="-177.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">simulationSetUp</text>
 </a>
 </g>
 </g>
-<!-- program~droplet2csv&#45;&gt;module~virusdroplet_m -->
+<!-- proc~simulationsetup&#45;&gt;module~virusdroplet_m -->
 <g id="module~~virusdroplet_m~~UsedByGraph_edge1" class="edge">
-<title>program~droplet2csv&#45;&gt;module~virusdroplet_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M149.95,-168.42C142.81,-165.71 135.54,-162.56 129,-159 106.53,-146.76 83.72,-128.53 67.97,-114.82"/>
+<title>proc~simulationsetup&#45;&gt;module~virusdroplet_m</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M148.69,-167.94C141.95,-165.34 135.16,-162.35 129,-159 106.53,-146.76 83.72,-128.53 67.97,-114.82"/>
 <polygon fill="#000000" stroke="#000000" points="70.22,-112.14 60.42,-108.12 65.58,-117.37 70.22,-112.14"/>
 </g>
 <!-- module~dropletgenerator_m -->
@@ -192,48 +192,48 @@
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M148.1,-125.96C132.46,-121.31 114.39,-115.93 97.92,-111.02"/>
 <polygon fill="#000000" stroke="#000000" points="98.49,-107.54 87.91,-108.04 96.5,-114.25 98.49,-107.54"/>
 </g>
-<!-- program~translate -->
+<!-- program~droplet2csv -->
 <g id="module~~virusdroplet_m~~UsedByGraph_node4" class="node">
+<title>program~droplet2csv</title>
+<g id="a_module~~virusdroplet_m~~UsedByGraph_node4"><a xlink:href=".././program/droplet2csv.html" xlink:title="droplet2CSV">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="229,-108 150,-108 150,-84 229,-84 229,-108"/>
+<text text-anchor="middle" x="189.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">droplet2CSV</text>
+</a>
+</g>
+</g>
+<!-- program~droplet2csv&#45;&gt;module~virusdroplet_m -->
+<g id="module~~virusdroplet_m~~UsedByGraph_edge3" class="edge">
+<title>program~droplet2csv&#45;&gt;module~virusdroplet_m</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M149.97,-96C135.59,-96 118.96,-96 103.33,-96"/>
+<polygon fill="#000000" stroke="#000000" points="103.24,-92.5 93.24,-96 103.24,-99.5 103.24,-92.5"/>
+</g>
+<!-- program~translate -->
+<g id="module~~virusdroplet_m~~UsedByGraph_node5" class="node">
 <title>program~translate</title>
-<g id="a_module~~virusdroplet_m~~UsedByGraph_node4"><a xlink:href=".././program/translate.html" xlink:title="translate">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="219.5,-108 159.5,-108 159.5,-84 219.5,-84 219.5,-108"/>
-<text text-anchor="middle" x="189.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">translate</text>
+<g id="a_module~~virusdroplet_m~~UsedByGraph_node5"><a xlink:href=".././program/translate.html" xlink:title="translate">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="219.5,-66 159.5,-66 159.5,-42 219.5,-42 219.5,-66"/>
+<text text-anchor="middle" x="189.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">translate</text>
 </a>
 </g>
 </g>
 <!-- program~translate&#45;&gt;module~virusdroplet_m -->
 <g id="module~~virusdroplet_m~~UsedByGraph_edge4" class="edge">
 <title>program~translate&#45;&gt;module~virusdroplet_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M159.28,-96C143.08,-96 122.38,-96 103.21,-96"/>
-<polygon fill="#000000" stroke="#000000" points="103.06,-92.5 93.06,-96 103.06,-99.5 103.06,-92.5"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M159.28,-62.7C141.46,-68.01 118.19,-74.94 97.51,-81.1"/>
+<polygon fill="#000000" stroke="#000000" points="96.49,-77.76 87.9,-83.96 98.49,-84.46 96.49,-77.76"/>
 </g>
 <!-- program~dropletcount -->
-<g id="module~~virusdroplet_m~~UsedByGraph_node5" class="node">
+<g id="module~~virusdroplet_m~~UsedByGraph_node6" class="node">
 <title>program~dropletcount</title>
-<g id="a_module~~virusdroplet_m~~UsedByGraph_node5"><a xlink:href=".././program/dropletcount.html" xlink:title="dropletCount">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="230.5,-66 148.5,-66 148.5,-42 230.5,-42 230.5,-66"/>
-<text text-anchor="middle" x="189.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">dropletCount</text>
+<g id="a_module~~virusdroplet_m~~UsedByGraph_node6"><a xlink:href=".././program/dropletcount.html" xlink:title="dropletCount">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="230.5,-24 148.5,-24 148.5,0 230.5,0 230.5,-24"/>
+<text text-anchor="middle" x="189.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">dropletCount</text>
 </a>
 </g>
 </g>
 <!-- program~dropletcount&#45;&gt;module~virusdroplet_m -->
 <g id="module~~virusdroplet_m~~UsedByGraph_edge5" class="edge">
 <title>program~dropletcount&#45;&gt;module~virusdroplet_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M148.47,-65.92C132.68,-70.63 114.37,-76.08 97.71,-81.05"/>
-<polygon fill="#000000" stroke="#000000" points="96.7,-77.69 88.12,-83.9 98.7,-84.4 96.7,-77.69"/>
-</g>
-<!-- proc~simulationsetup -->
-<g id="module~~virusdroplet_m~~UsedByGraph_node6" class="node">
-<title>proc~simulationsetup</title>
-<g id="a_module~~virusdroplet_m~~UsedByGraph_node6"><a xlink:href=".././proc/simulationsetup.html" xlink:title="simulationSetUp">
-<polygon fill="#d9534f" stroke="#d9534f" points="239.5,-24 139.5,-24 139.5,0 239.5,0 239.5,-24"/>
-<text text-anchor="middle" x="189.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">simulationSetUp</text>
-</a>
-</g>
-</g>
-<!-- proc~simulationsetup&#45;&gt;module~virusdroplet_m -->
-<g id="module~~virusdroplet_m~~UsedByGraph_edge3" class="edge">
-<title>proc~simulationsetup&#45;&gt;module~virusdroplet_m</title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M148.69,-24.06C141.95,-26.66 135.16,-29.65 129,-33 106.53,-45.24 83.72,-63.47 67.97,-77.18"/>
 <polygon fill="#000000" stroke="#000000" points="65.58,-74.63 60.42,-83.88 70.22,-79.86 65.58,-74.63"/>
 </g>
